# lua_of_ocaml

./: .gitignore  Makefile  PROJECT_SCAN_REPORT.md  README.md  dune-project  hello.byte  hello.lua  hello.ml  index.html  loo  lua_of_ocaml.opam  lua_of_ocaml.opam.template  report.txt
.github/workflows/: ci.yml
compiler/bin-lua_of_ocaml/: dune  main.ml
compiler/lib/: dune  generate_lua.ml  lua.ml  lua.mli  lua_output.ml  output_lua.ml  runtime_lua.ml
example-game/: Makefile  headless.lua  love_runtime.lua
examples/game/: love_runtime.lua  (+1 more)
misc/: bench.md  bench.ml  effects-writeup.md  loo.in  prim_inventory.sh
runtime/lua/: array.lua  dune  effects.lua  fail.lua  ints.lua  io.lua  misc.lua  obj.lua  stdlib.lua  string.lua  traceback.lua
test/: Makefile  dune  hello.byte  hello.lua  hello.ml  run_all.sh  run_tests.sh
test/behavioral/: arith.ml  arrays.ml  bools.ml  buffer.ml  bytes_loop.ml  comparison.ml  effects.ml  firstclass.ml  floats.ml  functions.ml  gadt.ml  hashtbl.ml  higher_order.ml  json.ml  modules.ml  objects.ml  options.ml  polyvariants.ml  printf_multi.ml  printf_single.ml  run.sh  strings.ml  structural_eq.ml
test/compiler/: Makefile  arith.ml  closures.ml  exceptions.ml  float.ml  functions.ml  int_ops.ml  lists.ml  minimal.ml  pattern_match.ml  recursion.ml  strings.ml  tuples.ml
test/ffi/: Makefile  README.md  external_impl.lua  ffi_test.lua  lua_stubs.c  roundtrip.lua  roundtrip.ml
test/runtime/: Makefile  ints_test.lua  obj_test.lua  string_test.lua
test/smoke/: Makefile  hello.ml
tools/: lua_bind_gen.md  lua_bind_gen.ml
(+11 files in other folders)
